# Loop-Breaker

./: .env.example  .gitignore  .gitmodules  BUFFER_SLICING_GUIDE.md  BufferTest.jucer  CLICK_REMOVAL_GUIDE.md  CMakeLists.txt  DECLICK_REPORT.md  DesignDoc.md  IMPLEMENTATION_CHECKLIST.md  LoopBreaker.jucer  MIDI_CONTROL.md  MODIFIER_PRESETS_PLAN.md  README.md  SOUNDTOUCH_LOOKAHEAD_REPORT.md  SOUNDTOUCH_REVERSE_CONFLICT_FIX.md  SOUNDTOUCH_TEARING_REPORT.md  SPEED_STRETCH_CONFLICT_REPORT.md  UI_PERFORMANCE_INVESTIGATION.md  VISUAL_DESIGN_OVERHAUL.md  build_and_run.sh  bump_version.sh  gen_build_info.sh  generate_manual.py  plan.md  run_pluginval.sh
.github/skills/create-new-modifier/: SKILL.md
.github/skills/create-new-theme/: SKILL.md
.github/skills/create-new-theme/agents/: openai.yaml
.github/skills/create-new-theme/scripts/: check_theme_palette.py
.github/workflows/: build-macos-release.yml  build-windows.yml  secret-scan.yml
Installer/: build_installer.sh  distribution.xml  uninstall.sh
Installer/output/: LoopBreaker-1.0.0-macOS.pkg
Installer/output/Loop Breaker/: LoopBreaker-macOS.pkg
Installer/resources/: conclusion.html  readme.html  welcome.html
Resources/: moonbase_api_config.json
Source/: Animator.h  AppState.h  AudioBuffer.cpp  AudioBuffer.h  AudioBufferManager.cpp  AudioBufferManager.h  AudioContinuityTests.cpp  BackgroundAnimator.h  BufferTestIntegration.h  BuildInfo.h  ChannelStrip.h  ClickDetectionTestMain.cpp  ClickDetectionTests.cpp  ControlSurfacePalette.h  DebugPanelContent.h  EmbeddedAudio.h  FxStatusPanel.h  GlyphContactSheet.cpp  GlyphContactSheet.h  GlyphLabComponent.h  HelpPanelContent.h  IOSAppComponent.h  LockFreeBoundedQueue.h  LoopBreakerIntegration.h  Main.cpp  MainAppComponent.cpp  MainAppComponent.h  MainComponent.cpp  MainComponent.h  Modifier.cpp  Modifier.h  ModifierCategoryVisuals.h  ModifierGlyphRenderer.cpp  ModifierGlyphRenderer.h  ModifierHistoryPanel.h  ModifierPreset.h  ModifierProbabilityManager.h  ModifierProbabilityPanel.h  ModifierRegistry.h  ModifierScheduler.cpp  (+37 more)
archived_documents/: DesignDoc.md  REVERSE_PLAYBACK_IMPLEMENTATION.md  VISUAL_DESIGN_OVERHAUL.md
docs/: CMAKE_WARNINGS.md  README.md
docs/architecture/: DSP_Architecture.html
docs/archive/: AUDIO_PERFORMANCE_REPORT.md  BUFFER_SLICING_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  MIDI_CONTROL.md  MODIFIER_PRESETS_PLAN.md  README.md  REVERSE_PLAYBACK_IMPLEMENTATION.md  SOUNDTOUCH_TEARING_REPORT.md  VISUAL_DESIGN_OVERHAUL.md
docs/plans/: CONTROL_SURFACE_VISUAL_DESIGN.md  plan.md
docs/reports/: AUDIO_CRACKLE_REGRESSION_RESEARCH_2026-07-23.md  GPU_USAGE_REPORT.md  PAUSE_RESUME_MODIFIER_STATE_REPORT.md  UI_PERFORMANCE_INVESTIGATION.md
website/: index.html  loop-breaker.html  style.css
